@@ -11,15 +11,17 @@ do
 
     # First Pass
     ffmpeg \
-        -pass 1 \
-        -vcodec libx264 -b 500k -s 640x480 \
+        -i "$input" \
         -an \
-        -i "$input" "$output"
+        -pass 1 \
+        -vcodec libx264 -vpre slow_firstpass -threads 0 -b 500k -s 640x480 \
+        "$output"
 
     # Second Pass
     ffmpeg \
+        -i "$input" \
+        -acodec libfaac -ab 24k \
         -pass 2 \
-        -vcodec libx264 -b 500k -s 640x480 \
-        -acodec mp3 -ab 24k \
-        -i "$input" "$output"
+        -vcodec libx264 -vpre slow -threads 0 -b 500k -s 640x480 \
+        "$output"
 done
